Revision history for Dist-Zilla-Plugin-PodWeaver

{{$NEXT}}

3.101642  2013-07-25 14:05:58 America/Los_Angeles
          pass the DZ logger to Pod::Weaver along correctly if weaver.ini exists

          document use of FileFinderUser and the finder attribute

          remove unused module loading, defer other loading until runtime

3.101641  2010-10-14 22:55:42 America/New_York
          pass the DZ distmeta to the weaver as input (thanks, David Golden)

3.101640  2010-06-13 08:07:17 America/New_York
          fix a missing prereq and improve tests to show more information on
          failure to compile

3.101620  2010-06-11 20:30:13 America/New_York
          also weave ExecFiles; use FileFinderUser (rt #55870)

3.101530  2010-06-02 07:46:49 America/New_York
          don't assume that cwd is the right directory for dist root (Florian
          Ragwitz)

3.100710  2010-03-12 10:07:39 America/New_York

3.100680  2010-03-09 23:34:17 America/New_York
          improve how we pass extra config to Pod::Weaver; fixes logger

3.100650  2010-03-06 23:25:07 America/New_York

3.093321  2009-11-28 22:24:14 America/New_York
          make the ->weaver method public for subclassing

3.093320  2009-11-28 22:10:59 America/New_York
          pass the zilla into the weaver

3.093170  2009-11-13
          fix a bug that caused config files to sometimes be ignored
          (reported by Jerome Quelin)

3.093020  2009-10-29
          refactor much of the guts to Pod::Elemental::PerlMunger

3.093001  2009-10-27
          config_plugin to allow '@Whatever' to configure your weaver

3.093000  2009-10-27
          much of the generic prep work has been moved to the core @CorePrep

3.092990  2009-10-26
          if a ./weaver.* file exists, try to use Pod::Weaver->new_from_config

3.092971  2009-10-24
          major rewrite to use Pod::Weaver 3

2.000     2009-02-12
          first release, split out of the Dist-Zilla distribution